--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Happy Birthday Lauren</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <img src="confetti.gif" class="confetti">
+    <div class="container">
+      <div class="heading">Happy Birthday Lauren</div>
+      <div class="lauren-cake">
+        <div class="cake-front">
+          <img src="applepen-front.png">
+        </div>
+        <div class="lauren">
+          <img src="lauren-nobackground.png">
+        </div>
+        <div class="cake-back">
+          <img src="applepen-back.png">
+        </div>
+        <div class="piagg">Yo that's pretty piagg</div>
+      </div>
+    </div>
+  </body>
+</html>
